<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical">

            <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_reg"
            android:layout_marginTop="90dp"
            android:layout_marginHorizontal="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            app:helperTextEnabled="true"
            app:helperText="Имя пользователя должно содержать не менее 5 символов"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_reg_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#356859" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_reg"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_reg_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#356859" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_reg"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:helperTextEnabled="true"
                app:helperText="Пароль должен содержать не менее 8 символов"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_reg_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#356859" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_pass_reg"
                android:layout_marginVertical="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Проверка пароля"
                app:errorEnabled="true"
                app:endIconMode="password_toggle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_pass_reg_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#356859" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/error_tv"
                android:layout_marginHorizontal="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/outlinedButton"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:onClick="registration"
                android:text="@string/registrate"
                android:textSize="16sp">

            </com.google.android.material.button.MaterialButton> </LinearLayout>
    </ScrollView>

</LinearLayout>