<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">




    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:scrollbars="vertical"
            android:visibility="invisible">

        </androidx.recyclerview.widget.RecyclerView>
        <TextView
            android:id="@+id/search_view_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Здесь вы можете найти любую книгу"
            android:textSize="19sp"
            android:layout_marginTop="100dp"
            android:layout_marginHorizontal="35dp"
            />

        <ImageView
            android:id="@+id/book_shelf"
            android:layout_width="wrap_content"
            android:layout_height="160dp"
            app:srcCompat="@drawable/polka"
            android:layout_marginTop="130dp"/>
    </FrameLayout>


</LinearLayout>