<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item android:id="@+id/auth"
        android:icon="@drawable/ic_person_outline_24px"
        android:title="@string/enter"
        app:showAsAction="always" />
    <item android:id="@+id/registr"
        android:icon="@drawable/ic_person_add_24px"
        android:title="@string/registration"
        app:showAsAction="ifRoom" />
</menu>